--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <h1>Contact Me</h1>
         <p>I'd love to hear from you!</p>
     </section>
+    <section>
+        <img src="" alt="" srcset="">
+    </section>
     <footer>
 
     </footer>
